# FastPospal

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy.yml
deploy/: Dockerfile  docker-compose.prod.example.yml  docker-compose.yml  fastpospal.service  nginx.conf.example  push-image.sh
docs/: 2026-07-09-migration-round.md
docs/superpowers/specs/: 2026-07-09-fastpospal-migration-design.md
fastpospal/: __init__.py  builders.py  client.py  openapi.py  parsers.py  service.py
fastpospal/mcp/: __init__.py  deps.py  fields.py  instance.py
fastpospal/mcp/tools/: __init__.py  categories.py  customers.py  products.py  reports.py  semantic.py  session.py  stock.py
fastpospal/raw/: __init__.py  builders.py  client.py  parsers.py  service.py
fastpospal/semantic/: __init__.py  categories.py  datetime_range.py  formatters.py  service.py  shops.py
scripts/: acceptance_test.py  test_interfaces.py
tests/: test_mcp.py  test_parsers.py  test_semantic.py
