[project]
name = "fastpospal"
version = "0.1.0"
description = "银豹 PosPal 逆向 MCP 服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastmcp>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
fastpospal = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastpospal"]
